--- a/05-Recursion/04-LinkedList-and-Recursion/CMakeLists.txt
+++ b/05-Recursion/04-LinkedList-and-Recursion/CMakeLists.txt
@@ -3,4 +3,4 @@ project(LinkedList-and-Recursion)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(LinkedList-and-Recursion main.cpp ListNode.h Solution.h Solution2.h Solution3.h Solution4.h Sum.h)
+add_executable(LinkedList-and-Recursion main.cpp ListNode.h Solution.h Solution2.h Solution3.h Solution4.h Solution5.h Sum.h)
