--- a/05-Recursion/04-LinkedList-and-Recursion/CMakeLists.txt
+++ b/05-Recursion/04-LinkedList-and-Recursion/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(LinkedList-and-Recursion)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(LinkedList-and-Recursion main.cpp ListNode.h Solution.h Solution2.h Solution3.h Solution4.h Solution5.h Sum.h)
+add_executable(LinkedList-and-Recursion main.cpp ListNode.h Solution1.h Solution2.h Solution3.h Solution4.h Solution5.h Sum.h)
