--- a/05-Recursion/02-Test-Your-LinkedList-Solution/CMakeLists.txt
+++ b/05-Recursion/02-Test-Your-LinkedList-Solution/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(Test-Your-LinkedList-Solution)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Test-Your-LinkedList-Solution main.cpp ListNode.h Solution.h Solution2.h Solution3.h)
+add_executable(Test-Your-LinkedList-Solution main.cpp ListNode.h Solution1.h Solution2.h Solution3.h)
